k8s/platy/backend-bun-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platy-backend-bun
spec:
  selector:
    app: platy-backend-bun
  ports:
  - port: 3001
    targetPort: 3001
