k8s/platy/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platy-backend
spec:
  type: ClusterIP
  selector:
    app: platy-backend
  ports:
  - port: 3000
    targetPort: 3000
