k8s/platy/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platy-frontend
spec:
  type: ClusterIP
  selector:
    app: platy-frontend
  ports:
  - port: 80
    targetPort: 80
