k8s/platy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platy-api
  annotations:
    traefik.ingress.kubernetes.io/router.priority: "200"
spec:
  ingressClassName: traefik
  rules:
  - host: platy.sancode.dev
    http:
      paths:
      - path: /api/v1
        pathType: Prefix
        backend:
          service:
            name: platy-backend
            port:
              number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platy-frontend
  annotations:
    traefik.ingress.kubernetes.io/router.priority: "100"
spec:
  ingressClassName: traefik
  rules:
  - host: platy.sancode.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: platy-frontend
            port:
              number: 80
